# bdsim

./: .gitmodules  CMakeLists.txt  bdsim.cc  doxygen.cnf  doxygen.cnf.in
analysis/: Analysis.cc  Analysis.hh  CMakeLists.txt  Config.cc  DataLoader.cc  DataLoader.hh  EventAnalysis.cc  EventAnalysis.hh  EventAnalysisOrbit.cc  HeaderAnalysis.cc  HeaderAnalysis.hh  HistogramAccumulator.cc  HistogramAccumulator.hh  HistogramAccumulatorFast.cc  HistogramAccumulatorFast.hh  HistogramAccumulatorFastLinkDef.hh  HistogramAccumulatorV.cc  HistogramAccumulatorV.hh  HistogramCombineFromFile.cc  HistogramCombineFromFile.hh  HistogramCombineFromFileLinkDef.hh  HistogramMeanFromFile.cc  HistogramMeanFromFile.hh  PerEntryHistogram.cc  PerEntryHistogram.hh  PerEntryHistogramSet.cc  PerEntryHistogramSet.hh  RunAnalysis.cc  SamplerAnalysis.cc  SamplerAnalysis.hh  TH2DOpt.hh  rebdsim.cc  rebdsimCombineRun.cc  rebdsimHistoMerge.cc  rebdsimOptics.cc
cmake/Modules/: bdsim_test_macros.cmake
configuration/: BDSVersionData.hh  CMakeLists.txt
include/: BDSAcceleratorComponent.hh  BDSAcceleratorModel.hh  BDSAperture.hh  BDSApertureCircle.hh  BDSApertureCircular.hh  BDSApertureClicPCL.hh  BDSApertureCurved.hh  BDSApertureEllipse.hh  BDSApertureElliptical.hh  BDSApertureEllpse.hh  BDSApertureFactory.hh  BDSApertureOctagon.hh  BDSAperturePoints.hh  BDSApertureRaceTrack.hh  BDSApertureRectCircle.hh  BDSApertureRectEllipse.hh  BDSApertureRectangle.hh  BDSApertureRectangular.hh  BDSApertureRhombus.hh  BDSApertureType.hh  BDSAuxiliaryNavigator.hh  BDSBH4D.hh  BDSBH4DBase.hh  BDSBOptnSplitAtCreation.hh  BDSBOptrMultiParticleMuonFluxEnhancement.hh  BDSBOptrMuonFluxEnhancement.hh  BDSBeamPipeFactory.hh  BDSBeamPipeFactoryBase.hh  BDSBeamPipeFactoryGeneral.hh  BDSBeamPipeFactoryLHCDetailed.hh  BDSBeamPipeInfo2.hh  BDSBeamPipeToApertureType.hh  BDSBeamPipeType.hh  BDSBeamlineElement.hh  BDSBendBuilder.hh  BDSBooleanProcessorCGAL.hh  BDSBunchRadioactiveDecaySource.hh  BDSBunchType.hh  BDSCollimatorCrystal.hh  BDSComponentFactory.hh  (+59 more)
parser/: CMakeLists.txt  aperture.cc  aperture.h  beam.cc  beamBase.h  element.cc  element.h  options.cc  options.h  optionsBase.cc  optionsBase.h  parameters.cc  parser.cc  parser.h  parser.l  parser.y  particlefilter.cc  particlefilter.h  samplerplacement.cc  samplerplacement.h  scorer.cc  scorer.h
src/: BDSAcceleratorComponent.cc  BDSAcceleratorModel.cc  BDSAperture.cc  BDSApertureCircle.cc  BDSApertureCircular.cc  BDSApertureClicPCL.cc  BDSApertureEllipse.cc  BDSApertureElliptical.cc  BDSApertureEllpse.cc  BDSApertureFactory.cc  BDSApertureInfo.cc  BDSApertureOctagon.cc  BDSAperturePoints.cc  BDSApertureRaceTrack.cc  BDSApertureRectCircle.cc  BDSApertureRectCirlce.cc  BDSApertureRectEllipse.cc  BDSApertureRectangle.cc  BDSApertureRectangular.cc  BDSApertureRhombus.cc  BDSApertureType.cc  BDSAuxiliaryNavigator.cc  BDSBH4D.cc  BDSBOptnSplitAtCreation.cc  BDSBOptrMultiParticleMuonFluxEnhancement.cc  BDSBOptrMuonFluxEnhancement.cc  BDSBeamPipeFactory.cc  BDSBeamPipeFactoryBase.cc  BDSBeamPipeFactoryGeneral.cc  BDSBeamPipeFactoryLHCDetailed.cc  BDSBeamPipeInfo.cc  BDSBeamPipeInfo2.cc  BDSBeamPipeToApertureType.cc  BDSBeamPipeType.cc  BDSBeamline.cc  BDSBeamlineElement.cc  BDSBeamlineEndPieceBuilder.cc  BDSBendBuilder.cc  BDSBooleanProcessorCGAL.cc  BDSBunch.cc  (+88 more)
test/: BDSTRKTest.cc  BDSTRKTest1.cc  CMakeLists.txt  TRKApertureTest1.cc  TRKBunchTest.cc
test/BDSBunchTestFiles/: 8_GaussTwiss.gmad
test/BDSTRKTestFiles/: 101_ThinDriftTest.gmad  102_ThinDipoleTest.gmad  103_ThinQuadTest.gmad  104_ThinSextTest.gmad  105_ThinOctTest.gmad  106_HybridDriftTest.gmad  1_ApertureTest.gmad  2_TrackerTest.gmad  3_TrackerTestAllElements.gmad  CMakeLists.txt  GenericHybridTest.gmad  GenericThinTest.gmad  beam.gmad  fodo.gmad  options.gmad
test/BDSTrackingTestFiles/: CMakeLists.txt  beam.gmad  gmad  latt.gmad  main.gmad
test/TRKBunchTestFiles/: 1_Bunch.gmad  1_BunchTest.gmad  CMakeLists.txt
test/TrackingTestFiles/: bdsTrackingTester.py
test/TrackingTestFiles/Bend/: latt.gmad
tracker/: CMakeLists.txt  EventOutput.cc  EventOutput.hh  FixedStepTracker.cc  FixedStepTracker.hh  OpticsAccumulator.cc  OpticsAccumulator.hh  TRK.h  TRK.hh  TRKAperture.cc  TRKAperture.hh  TRKApertureCircular.cc  TRKApertureCircular.hh  TRKApertureEllipsoidal.cc  TRKApertureEllipsoidal.hh  TRKApertureInterface.cc  TRKApertureInterface.hh  TRKApertureRectangular.cc  TRKApertureRectangular.hh  TRKBacktracker.cc  TRKBacktracker.hh  TRKBend.cc  TRKBend.hh  TRKBunch.cc  TRKBunch.hh  TRKDecapole.cc  TRKDecapole.hh  TRKDefaultStrategy.cc  TRKDefaultStrategy.hh  TRKDipole.cc  TRKDipole.hh  TRKDipoleFringe.cc  TRKDipoleFringe.hh  TRKDrift.cc  TRKDrift.hh  TRKElement.cc  TRKElement.hh  TRKElementLine.cc  TRKElementLine.hh  TRKFactory.cc  (+76 more)
(+84 files in other folders)
